--- a/Calculator.csproj
+++ b/Calculator.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <StartupObject>Calculator.CalculatorTests</StartupObject>
+    <StartupObject>CalculatorApp</StartupObject>
   </PropertyGroup>
 
 </Project>
